# rust-game

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: check.yaml
game/: Cargo.toml
game/assets/: tile-based-game.ldtk
game/src/: cli.rs  collider.rs  color.rs  lib.rs  main.rs
game/src/animation/: components.rs  mod.rs  systems.rs
game/src/enemy/: mod.rs  systems.rs
game/src/fruit/: components.rs  mod.rs  systems.rs
game/src/main_menu/: mod.rs  styles.rs  systems.rs
game/src/player/: components.rs  mod.rs  systems.rs
game/src/ui/: mod.rs
game/src/ui/pause_menu/: mod.rs  systems.rs
game/src/world/: components.rs  mod.rs  systems.rs
nixos/: default.nix
nixos/tests/: verify-game-starts.nix
