[workspace]
resolver = "2"
package.version = "0.1.0"

members = [
  "game",
]

[profile.release]
codegen-units = 1

[profile.wasm-release]
inherits = "release"
strip = "debuginfo"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
