[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["mp3"] }
bevy_rapier2d = "0.27"
leafwing-input-manager = "0.15"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tracing = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
