[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["mp3"] }
bevy_rapier2d = "0.27"
bevy_ecs_ldtk = "0.10"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git" }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tracing = "0.1"

[profile.release]
codegen-units = 1

[profile.wasm-release]
inherits = "release"
strip = "debuginfo"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
